# clairvoyance

./: README.md
client/: .gitignore  Makefile  Makefile.am  config.h  config.h.in~  config.status  configure.ac
client/include/: config.h  json.h  main.h  mingw.thread.h  net.h  reboot.h  vnc.h
client/src/: Makefile  Makefile.am  config.cpp  config.json  json.cpp  main.c  main.cpp  net.cpp  reboot.cpp  update_build.sh
client/src/.deps/: main.Po
client/src/linux/: reboot.cpp
client/src/win32/: reboot.cpp  service.cpp  vnc.cpp
